[project]
name = "agent-experimentation"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "neo4j (>=5.28.1,<6.0.0)",
    "langchain-neo4j (>=0.5.0,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false